[package]
name = "varnishslog-types"
version = "0.5.3-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "Serde types for varnishslog output"
repository = "https://github.com/jpastuszek/varnishslog-types"
documentation = "https://docs.rs/varnishslog-types"
readme = "README.md"
keywords = ["varnish", "log"]
categories = ["parser-implementations"]
license = "MIT"

[dependencies]
serde = "1.0.84"
serde_derive = "1.0.84"
linear-map = { version = "1.2.0", features = ["serde_impl"] }

[dev-dependencies]
serde_json = "1.0.36"
criterion = "0.2.8"

[lib]
bench = false

[[bench]]
name = "json"
harness = false
